Fix bleeding footer

--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -1,4 +1,4 @@
-.footer {
+#footer {
   padding: 8px 16px;
   background: $dark;
   color: white;
